nerva_libwallet2_api_c/src/main/cpp/nerva_wallet2_api_c.h

//     virtual std::string publicViewKey() const = 0;
extern ADDAPI const char* NERVA_Wallet_publicViewKey(void* wallet_ptr);
//     virtual std::string secretSpendKey() const = 0;
extern ADDAPI const char* NERVA_Wallet_secretSpendKey(void* wallet_ptr);
//     virtual std::string publicSpendKey() const = 0;
extern ADDAPI const char* NERVA_Wallet_publicSpendKey(void* wallet_ptr);
//     virtual std::string publicMultisigSignerKey() const = 0;
extern ADDAPI const char* NERVA_Wallet_publicMultisigSignerKey(void* wallet_ptr);
//     virtual void stop() = 0;
//     virtual bool store(const std::string &path) = 0;
extern ADDAPI bool NERVA_Wallet_store(void* wallet_ptr, const char* path);
//     virtual std::string filename() const = 0;
extern ADDAPI const char* NERVA_Wallet_filename(void* wallet_ptr);
//     virtual std::string keysFilename() const = 0;
extern ADDAPI const char* NERVA_Wallet_keysFilename(void* wallet_ptr);
//     virtual bool init(const std::string &daemon_address, uint64_t upper_transaction_size_limit = 0, const std::string &daemon_username = "", const std::string &daemon_password = "", bool use_ssl = false, bool lightWallet = false, const std::string &proxy_address = "") = 0;
extern ADDAPI bool NERVA_Wallet_init(void* wallet_ptr, const char* daemon_address, uint64_t upper_transaction_size_limit, const char* daemon_username, const char* daemon_password, bool use_ssl, bool lightWallet);
//     virtual bool createWatchOnly(const std::string &path, const std::string &password, const std::string &language) const = 0;
extern ADDAPI bool NERVA_Wallet_createWatchOnly(void* wallet_ptr, const char* path, const char* password, const char* language);
//     virtual void setRefreshFromBlockHeight(uint64_t refresh_from_block_height) = 0;
extern ADDAPI void NERVA_Wallet_setRefreshFromBlockHeight(void* wallet_ptr, uint64_t refresh_from_block_height);
//     virtual uint64_t getRefreshFromBlockHeight() const = 0;
extern ADDAPI uint64_t NERVA_Wallet_getRefreshFromBlockHeight(void* wallet_ptr);
//     virtual void setRecoveringFromSeed(bool recoveringFromSeed) = 0;
extern ADDAPI void NERVA_Wallet_setRecoveringFromSeed(void* wallet_ptr, bool recoveringFromSeed);
//     virtual void setRecoveringFromDevice(bool recoveringFromDevice) = 0;
extern ADDAPI void NERVA_Wallet_setRecoveringFromDevice(void* wallet_ptr, bool recoveringFromDevice);
//     virtual void setSubaddressLookahead(uint32_t major, uint32_t minor) = 0;
extern ADDAPI void NERVA_Wallet_setSubaddressLookahead(void* wallet_ptr, uint32_t major, uint32_t minor);
//     virtual bool connectToDaemon() = 0;
extern ADDAPI bool NERVA_Wallet_connectToDaemon(void* wallet_ptr);
//     virtual ConnectionStatus connected() const = 0;
extern ADDAPI int NERVA_Wallet_connected(void* wallet_ptr);
//     virtual void setTrustedDaemon(bool arg) = 0;
extern ADDAPI void NERVA_Wallet_setTrustedDaemon(void* wallet_ptr, bool arg);
//     virtual bool trustedDaemon() const = 0;
extern ADDAPI bool NERVA_Wallet_trustedDaemon(void* wallet_ptr);
//     virtual bool setProxy(const std::string &address) = 0;
//     virtual uint64_t balance(uint32_t accountIndex = 0) const = 0;
extern ADDAPI uint64_t NERVA_Wallet_balance(void* wallet_ptr, uint32_t accountIndex);
//     uint64_t balanceAll() const {
//         uint64_t result = 0;
//         for (uint32_t i = 0; i < numSubaddressAccounts(); ++i)
//             result += balance(i);
//         return result;
//     }
//     virtual uint64_t unlockedBalance(uint32_t accountIndex = 0) const = 0;
extern ADDAPI uint64_t NERVA_Wallet_unlockedBalance(void* wallet_ptr, uint32_t accountIndex);
//     uint64_t unlockedBalanceAll() const {
//         uint64_t result = 0;
//         for (uint32_t i = 0; i < numSubaddressAccounts(); ++i)
//             result += unlockedBalance(i);
//         return result;
//     }
//     virtual bool watchOnly() const = 0;
//    virtual uint64_t viewOnlyBalance(uint32_t accountIndex, const std::vector<std::string> &key_images = {}) const = 0;
extern ADDAPI bool NERVA_Wallet_watchOnly(void* wallet_ptr);
//     virtual bool isDeterministic() const = 0;
//     virtual uint64_t blockChainHeight() const = 0;
extern ADDAPI uint64_t NERVA_Wallet_blockChainHeight(void* wallet_ptr);