impls/monero.dart/lib/src/generated_bindings_nerva.g.dart


  late final _NERVA_Wallet_publicViewKeyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>)>>('NERVA_Wallet_publicViewKey');
  late final _NERVA_Wallet_publicViewKey = _NERVA_Wallet_publicViewKeyPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Char> NERVA_Wallet_secretSpendKey(
    ffi.Pointer<ffi.Void> wallet_ptr,
  ) {
    return _NERVA_Wallet_secretSpendKey(
      wallet_ptr,
    );
  }

  late final _NERVA_Wallet_secretSpendKeyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>)>>('NERVA_Wallet_secretSpendKey');
  late final _NERVA_Wallet_secretSpendKey = _NERVA_Wallet_secretSpendKeyPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Char> NERVA_Wallet_publicSpendKey(
    ffi.Pointer<ffi.Void> wallet_ptr,
  ) {
    return _NERVA_Wallet_publicSpendKey(
      wallet_ptr,
    );
  }

  late final _NERVA_Wallet_publicSpendKeyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>)>>('NERVA_Wallet_publicSpendKey');
  late final _NERVA_Wallet_publicSpendKey = _NERVA_Wallet_publicSpendKeyPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Char> NERVA_Wallet_publicMultisigSignerKey(
    ffi.Pointer<ffi.Void> wallet_ptr,
  ) {
    return _NERVA_Wallet_publicMultisigSignerKey(
      wallet_ptr,
    );
  }

  late final _NERVA_Wallet_publicMultisigSignerKeyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>)>>('NERVA_Wallet_publicMultisigSignerKey');
  late final _NERVA_Wallet_publicMultisigSignerKey =
      _NERVA_Wallet_publicMultisigSignerKeyPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();

  bool NERVA_Wallet_store(
    ffi.Pointer<ffi.Void> wallet_ptr,
    ffi.Pointer<ffi.Char> path,
  ) {
    return _NERVA_Wallet_store(
      wallet_ptr,
      path,
    );
  }

  late final _NERVA_Wallet_storePtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Char>)>>('NERVA_Wallet_store');
  late final _NERVA_Wallet_store = _NERVA_Wallet_storePtr.asFunction<
      bool Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> NERVA_Wallet_filename(
    ffi.Pointer<ffi.Void> wallet_ptr,
  ) {
    return _NERVA_Wallet_filename(
      wallet_ptr,
    );
  }

  late final _NERVA_Wallet_filenamePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>)>>('NERVA_Wallet_filename');
  late final _NERVA_Wallet_filename = _NERVA_Wallet_filenamePtr.asFunction<
      ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Char> NERVA_Wallet_keysFilename(
    ffi.Pointer<ffi.Void> wallet_ptr,
  ) {
    return _NERVA_Wallet_keysFilename(
      wallet_ptr,
    );
  }

  late final _NERVA_Wallet_keysFilenamePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>)>>('NERVA_Wallet_keysFilename');
  late final _NERVA_Wallet_keysFilename = _NERVA_Wallet_keysFilenamePtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();

  bool NERVA_Wallet_init(
    ffi.Pointer<ffi.Void> wallet_ptr,
    ffi.Pointer<ffi.Char> daemon_address,
    int upper_transaction_size_limit,
    ffi.Pointer<ffi.Char> daemon_username,
    ffi.Pointer<ffi.Char> daemon_password,
    bool use_ssl,
    bool lightWallet,
  ) {
    return _NERVA_Wallet_init(
      wallet_ptr,
      daemon_address,
      upper_transaction_size_limit,
      daemon_username,
      daemon_password,
      use_ssl,
      lightWallet,
    );
  }

  late final _NERVA_Wallet_initPtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Char>,
              ffi.Uint64,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Bool,
              ffi.Bool)>>('NERVA_Wallet_init');
  late final _NERVA_Wallet_init = _NERVA_Wallet_initPtr.asFunction<
      bool Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>, int,
          ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, bool, bool)>();

  bool NERVA_Wallet_createWatchOnly(
    ffi.Pointer<ffi.Void> wallet_ptr,
    ffi.Pointer<ffi.Char> path,
    ffi.Pointer<ffi.Char> password,
    ffi.Pointer<ffi.Char> language,
  ) {
    return _NERVA_Wallet_createWatchOnly(
      wallet_ptr,
      path,
      password,
      language,
    );
  }

  late final _NERVA_Wallet_createWatchOnlyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('NERVA_Wallet_createWatchOnly');
  late final _NERVA_Wallet_createWatchOnly =
      _NERVA_Wallet_createWatchOnlyPtr.asFunction<
          bool Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void NERVA_Wallet_setRefreshFromBlockHeight(
    ffi.Pointer<ffi.Void> wallet_ptr,
    int refresh_from_block_height,
  ) {
    return _NERVA_Wallet_setRefreshFromBlockHeight(
      wallet_ptr,
      refresh_from_block_height,
    );
  }

  late final _NERVA_Wallet_setRefreshFromBlockHeightPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>,
              ffi.Uint64)>>('NERVA_Wallet_setRefreshFromBlockHeight');
  late final _NERVA_Wallet_setRefreshFromBlockHeight =
      _NERVA_Wallet_setRefreshFromBlockHeightPtr.asFunction<
          void Function(ffi.Pointer<ffi.Void>, int)>();

  int NERVA_Wallet_getRefreshFromBlockHeight(
    ffi.Pointer<ffi.Void> wallet_ptr,
  ) {
    return _NERVA_Wallet_getRefreshFromBlockHeight(
      wallet_ptr,
    );
  }

  late final _NERVA_Wallet_getRefreshFromBlockHeightPtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function(ffi.Pointer<ffi.Void>)>>(
          'NERVA_Wallet_getRefreshFromBlockHeight');
  late final _NERVA_Wallet_getRefreshFromBlockHeight =
      _NERVA_Wallet_getRefreshFromBlockHeightPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>)>();

  void NERVA_Wallet_setRecoveringFromSeed(
    ffi.Pointer<ffi.Void> wallet_ptr,
    bool recoveringFromSeed,
  ) {
    return _NERVA_Wallet_setRecoveringFromSeed(
      wallet_ptr,
      recoveringFromSeed,
    );
  }

  late final _NERVA_Wallet_setRecoveringFromSeedPtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Bool)>>(
      'NERVA_Wallet_setRecoveringFromSeed');
  late final _NERVA_Wallet_setRecoveringFromSeed =
      _NERVA_Wallet_setRecoveringFromSeedPtr.asFunction<
          void Function(ffi.Pointer<ffi.Void>, bool)>();

  void NERVA_Wallet_setRecoveringFromDevice(
    ffi.Pointer<ffi.Void> wallet_ptr,
    bool recoveringFromDevice,
  ) {
    return _NERVA_Wallet_setRecoveringFromDevice(
      wallet_ptr,
      recoveringFromDevice,
    );
  }

  late final _NERVA_Wallet_setRecoveringFromDevicePtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Bool)>>(
      'NERVA_Wallet_setRecoveringFromDevice');
  late final _NERVA_Wallet_setRecoveringFromDevice =
      _NERVA_Wallet_setRecoveringFromDevicePtr.asFunction<
          void Function(ffi.Pointer<ffi.Void>, bool)>();

  void NERVA_Wallet_setSubaddressLookahead(
    ffi.Pointer<ffi.Void> wallet_ptr,
    int major,
    int minor,
  ) {
    return _NERVA_Wallet_setSubaddressLookahead(
      wallet_ptr,
      major,
      minor,
    );
  }

  late final _NERVA_Wallet_setSubaddressLookaheadPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Uint32,
              ffi.Uint32)>>('NERVA_Wallet_setSubaddressLookahead');
  late final _NERVA_Wallet_setSubaddressLookahead =
      _NERVA_Wallet_setSubaddressLookaheadPtr.asFunction<
          void Function(ffi.Pointer<ffi.Void>, int, int)>();

  bool NERVA_Wallet_connectToDaemon(
    ffi.Pointer<ffi.Void> wallet_ptr,
  ) {
    return _NERVA_Wallet_connectToDaemon(
      wallet_ptr,
    );
  }

  late final _NERVA_Wallet_connectToDaemonPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<ffi.Void>)>>(
          'NERVA_Wallet_connectToDaemon');
  late final _NERVA_Wallet_connectToDaemon = _NERVA_Wallet_connectToDaemonPtr
      .asFunction<bool Function(ffi.Pointer<ffi.Void>)>();

  int NERVA_Wallet_connected(
    ffi.Pointer<ffi.Void> wallet_ptr,
  ) {
    return _NERVA_Wallet_connected(
      wallet_ptr,
    );
  }

  late final _NERVA_Wallet_connectedPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>)>>(
          'NERVA_Wallet_connected');
  late final _NERVA_Wallet_connected = _NERVA_Wallet_connectedPtr.asFunction<
      int Function(ffi.Pointer<ffi.Void>)>();

  void NERVA_Wallet_setTrustedDaemon(
    ffi.Pointer<ffi.Void> wallet_ptr,
    bool arg,
  ) {
    return _NERVA_Wallet_setTrustedDaemon(
      wallet_ptr,
      arg,
    );
  }

  late final _NERVA_Wallet_setTrustedDaemonPtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Bool)>>(
      'NERVA_Wallet_setTrustedDaemon');
  late final _NERVA_Wallet_setTrustedDaemon = _NERVA_Wallet_setTrustedDaemonPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>, bool)>();

  bool NERVA_Wallet_trustedDaemon(
    ffi.Pointer<ffi.Void> wallet_ptr,
  ) {
    return _NERVA_Wallet_trustedDaemon(
      wallet_ptr,
    );
  }

  late final _NERVA_Wallet_trustedDaemonPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<ffi.Void>)>>(
          'NERVA_Wallet_trustedDaemon');
  late final _NERVA_Wallet_trustedDaemon = _NERVA_Wallet_trustedDaemonPtr
      .asFunction<bool Function(ffi.Pointer<ffi.Void>)>();

  int NERVA_Wallet_balance(
    ffi.Pointer<ffi.Void> wallet_ptr,
    int accountIndex,
  ) {
    return _NERVA_Wallet_balance(
      wallet_ptr,
      accountIndex,
    );
  }

  late final _NERVA_Wallet_balancePtr = _lookup<
      ffi.NativeFunction<
          ffi.Uint64 Function(
              ffi.Pointer<ffi.Void>, ffi.Uint32)>>('NERVA_Wallet_balance');
  late final _NERVA_Wallet_balance = _NERVA_Wallet_balancePtr.asFunction<
      int Function(ffi.Pointer<ffi.Void>, int)>();

  int NERVA_Wallet_unlockedBalance(
    ffi.Pointer<ffi.Void> wallet_ptr,
    int accountIndex,
  ) {
    return _NERVA_Wallet_unlockedBalance(
      wallet_ptr,
      accountIndex,
    );
  }

  late final _NERVA_Wallet_unlockedBalancePtr = _lookup<
      ffi.NativeFunction<
          ffi.Uint64 Function(ffi.Pointer<ffi.Void>,
              ffi.Uint32)>>('NERVA_Wallet_unlockedBalance');
  late final _NERVA_Wallet_unlockedBalance = _NERVA_Wallet_unlockedBalancePtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>, int)>();

  bool NERVA_Wallet_watchOnly(
    ffi.Pointer<ffi.Void> wallet_ptr,
  ) {
    return _NERVA_Wallet_watchOnly(
      wallet_ptr,
    );
  }

  late final _NERVA_Wallet_watchOnlyPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<ffi.Void>)>>(
          'NERVA_Wallet_watchOnly');
  late final _NERVA_Wallet_watchOnly = _NERVA_Wallet_watchOnlyPtr.asFunction<
      bool Function(ffi.Pointer<ffi.Void>)>();

  int NERVA_Wallet_blockChainHeight(
    ffi.Pointer<ffi.Void> wallet_ptr,
  ) {
    return _NERVA_Wallet_blockChainHeight(
      wallet_ptr,
    );
  }
